Closed Bug 1686918 Opened 5 years ago Closed 5 years ago

Fix non-x86 builds that were broken by bug 1620993

Categories

(Toolkit :: Crash Reporting, defect)

Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
86 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox84 --- unaffected
firefox85 --- unaffected
firefox86 --- fixed

People

(Reporter: gsvelto, Assigned: gsvelto)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

As per title, this requires us to disable the new Rust code on those platforms and leave it enabled only on 32- and 64-bit x86.

Assignee: nobody → gsvelto
Status: NEW → ASSIGNED

Try run is here: https://treeherder.mozilla.org/#/jobs?repo=try&revision=4cc49c7f12c4702b849f3a4edc3b7b0abe1dcfcb

We don't have them on automation but this should also fix armhf, ppc64le, s390x, etc...

Set release status flags based on info from the regressing bug 1620993

Attachment #9197282 - Attachment description: Bug 1686918 - Disable the new Linux minidump writer on all architectures but x86 and x86-64 r=KrisWright → Bug 1686918 - Disable the new Linux minidump writer on all architectures but x86-64 r=glandium
Blocks: 1687181

The proposed fix unbreaks the build on Fedora 32 on ppc64le and s390x.

(In reply to Dan Horák from comment #4)

The proposed fix unbreaks the build on Fedora 32 on ppc64le and s390x.

Thanks for the feedback! The patch fixed building libxul but failed for gtest, this one should fix them both: https://treeherder.mozilla.org/jobs?repo=try&revision=e1d6a22f31799b47a4e985b2e653cfc1ef3fe402

Attachment #9197282 - Attachment description: Bug 1686918 - Disable the new Linux minidump writer on all architectures but x86-64 r=glandium → Bug 1686918 - Disable the new Linux minidump writer on all architectures but x86 & x86-64 r=glandium
Pushed by gsvelto@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/046f14fcb485 Disable the new Linux minidump writer on all architectures but x86 & x86-64 r=glandium

FYI - still looks good on ppc64le and s390x

Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: