Bug 1686918 - Disable the new Linux minidump writer on all architectures but x86 & x86-64 r=glandium

Differential Revision: https://phabricator.services.mozilla.com/D101870