toolkit/crashreporter/breakpad-client/linux/crash_generation/crash_generation_server.cc
@@ -51,7 +51,7 @@
 #include "common/linux/eintr_wrapper.h"
 #include "common/linux/safe_readlink.h"
 
-#if !defined(__ANDROID__)
+#if defined(MOZ_OXIDIZED_BREAKPAD)
 #include "mozilla/toolkit/crashreporter/rust_minidump_writer_linux_ffi_generated.h"
 #endif
 
@@ -270,16 +270,16 @@ CrashGenerationServer::ClientEvent(short revents)
   if (!MakeMinidumpFilename(minidump_filename))
     return true;
 
-#if defined(__ANDROID__)
-  if (!google_breakpad::WriteMinidump(minidump_filename.c_str(),
-                                      crashing_pid, crash_context,
-                                      kCrashContextSize)) {
+#if defined(MOZ_OXIDIZED_BREAKPAD)
+  if (!write_minidump_linux_with_context(minidump_filename.c_str(),
+                                      crashing_pid, crash_context)) {
     close(signal_fd);
     return true;
   }
 #else
-  if (!write_minidump_linux_with_context(minidump_filename.c_str(),
-                                      crashing_pid, crash_context)) {
+  if (!google_breakpad::WriteMinidump(minidump_filename.c_str(),
+                                      crashing_pid, crash_context,
+                                      kCrashContextSize)) {
     close(signal_fd);
     return true;
   }
