toolkit/crashreporter/breakpad-client/linux/handler/exception_handler.cc
@@ -97,7 +97,7 @@
 #include "common/linux/eintr_wrapper.h"
 #include "third_party/lss/linux_syscall_support.h"
 #include "prenv.h"
-#if !defined(__ANDROID__)
+#if defined(MOZ_OXIDIZED_BREAKPAD)
 #include "mozilla/toolkit/crashreporter/rust_minidump_writer_linux_ffi_generated.h"
 #endif
 
@@ -852,13 +852,13 @@ bool ExceptionHandler::WriteMinidumpForChild(pid_t child,
   // This function is not run in a compromised context.
   MinidumpDescriptor descriptor(dump_path);
   descriptor.UpdatePath();
-#if defined(__ANDROID__)
+#if defined(MOZ_OXIDIZED_BREAKPAD)
+  if (!write_minidump_linux(descriptor.path(), child, child_blamed_thread))
+      return false;
+#else
   if (!google_breakpad::WriteMinidump(descriptor.path(),
                                       child,
                                       child_blamed_thread))
-      return false;
-#else
-  if (!write_minidump_linux(descriptor.path(), child, child_blamed_thread))
       return false;
 #endif
 
